# graphdex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-core-engine.md
docs/superpowers/specs/: 2026-07-17-graphdex-design.md
src/graphdex/: __init__.py  api.py  cli.py  collect.py  models.py  subtokens.py
src/graphdex/parsing/: __init__.py  python.py
src/graphdex/resolve/: __init__.py  resolver.py
src/graphdex/store/: __init__.py  db.py  schema.py
tests/: test_api.py  test_cli.py  test_models.py  test_parse_python.py  test_resolve.py  test_store.py  test_subtokens.py
tests/fixtures/pyrepo/: app.py  test_app.py  unrelated.py
tests/fixtures/pyrepo/utils/: helpers.py
