[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphdex"
version = "0.1.0"
description = "The code graph that's never stale — always-fresh, confidence-labeled code context for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vansh Patil" }]
keywords = ["code-graph", "mcp", "tree-sitter", "ai-agents", "code-review"]
dependencies = [
    "tree-sitter>=0.23,<1",
    "tree-sitter-language-pack>=0.9,<1",
]

[project.urls]
Repository = "https://github.com/vanshpatil16/graphdex"

[project.scripts]
graphdex = "graphdex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphdex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
